# pivot-serverless

./: README.md
.github/workflows/: ci.yml
infrastructure/: README.md  cdk.json  docker-compose.yml  package-lock.json  package.json  sst.json  tmp.out.yml
infrastructure/lib/: CognitoStack.js  S3Stack.js  StaticWebsiteStack.js  index.js  pivot-infrastructure-stack.ts
infrastructure/test/: S3Stack.test.js  pivot-infrastructure.test.ts
services/: .gitignore  .pylintrc  README.md  requirements.txt  setup.cfg  setup.py
services/election/handlers/: read.py  update.py
services/elections/: package-lock.json  package.json
services/services/common/: http_support.py
services/services/election/handlers/: create.py  delete.py  read.py  update.py
services/tests/election/handlers/: test_create.py
ui/: .gitignore  README.md  config.example.json  package-lock.json  package.json
ui/src/: App.vue  main.js
