[metadata]
name = pivot-services
version = 1.0.0
author = Carl Schroedl
author_email = carlschroedl@gmail.com
description = Web services for conducting Ranked Pairs elections
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pivot-libre/pivot-serverless
project_urls =
    Bug Tracker = https://github.com/pivot-libre/pivot-serverless/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = services
packages = find:
python_requires = >=3.6

[options.packages.find]
where = services
